admin chal gaya

--- a/ecom-mysore-backend/src/main/resources/application.properties
+++ b/ecom-mysore-backend/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 
+# Enable security debugging to trace why some requests return 403 during smoke tests
+logging.level.org.springframework.security=DEBUG
+
 # ML Service Configuration
 ml.service.url=http://localhost:8000
 ml.service.timeout=5000
