feat(database): Implement initial schema and department hierarchy for complaints
- Added initial database schema with tables for users, complaints, complaint audit logs, notifications, and departments.
- Created indexes for efficient querying on complaints and notifications.
- Introduced a new column `department_hierarchy` in the complaints table to store ML-assigned escalation chains.
- Configured Flyway for automated database migrations and included migration files for initial setup and department hierarchy addition.

--- a/ecom-mysore-backend/src/main/resources/application.properties
+++ b/ecom-mysore-backend/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/emysore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
 
 # Enable security debugging to trace why some requests return 403 during smoke tests
 logging.level.org.springframework.security=DEBUG
